docs: change repo name

--- a/.copier-config.yaml
+++ b/.copier-config.yaml
@@ -7,7 +7,7 @@ documentaion_tool: jupyter-book
 documentation_url: https://lecture.entelecheia.ai
 email: entelecheia@hotmail.com
 friendly_name: Artificial Intelligence Courses Lecture Notes
-github_repo_name: .lecture
+github_repo_name: lecture
 github_username: entelecheia
 package_name: lecture
 project_description: null
