--- a/book/_config.yml
+++ b/book/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title: "Artificial Intelligence Courses Lecture Notes" # The title of the book. Will be placed in the left navbar.
+title: "Artificial Intelligence | Lecture Notes" # The title of the book. Will be placed in the left navbar.
 author: "Young Joon Lee" # The author of the book
 copyright: "2023" # Copyright year to be placed in the footer
 # logo: logo.png # A path to the book logo
