--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -4,7 +4,7 @@
 format: jb-book
 root: index
 parts:
-  - caption: Lectures
+  - caption: Course
     chapters:
       - file: lectures/nlp_intro/index
         sections:
