docs: furo theme test

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,8 +41,9 @@ html:
 
 sphinx:
   config:
-    bibtex_reference_style: author_year
+    html_theme: furo
     html_extra_path: ['assets']
+    bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     intersphinx_mapping:
       ebp:
