--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,19 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
+python-semantic-release = "^7.33.1"
+ekorpkit = "^0.1.40"
+
+[tool.poetry.group.book.dependencies]
 jupyter-book = "^0.13.2"
 matplotlib = "^3.7.0"
 numpy = "^1.24.2"
 sphinx-inline-tabs = "^2022.1.2b11"
-python-semantic-release = "^7.33.1"
-ekorpkit = "^0.1.40"
 sphinx-proof = "^0.1.3"
 sphinx-examples = "^0.0.5"
 sphinx-hoverxref = "^1.3.0"
+pydata-sphinx-theme = "^0.8.0"
+furo = ">2022.9.29"
 
 [tool.black]
 exclude = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']
