docs: pydata_sphinx_theme test

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,7 +41,7 @@ html:
 
 sphinx:
   config:
-    html_theme: furo
+    html_theme: pydata_sphinx_theme
     html_extra_path: ['assets']
     bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
@@ -83,3 +83,6 @@ sphinx:
     - sphinx_proof
     - sphinx_examples
     - hoverxref.extension
+
+launch_buttons:
+  colab_url: "https://colab.research.google.com"
