--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,7 +41,7 @@ html:
 
 sphinx:
   config:
-    html_theme: pydata_sphinx_theme
+    html_theme: furo
     html_extra_path: ['assets']
     bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
