--- a/book/_config.yml
+++ b/book/_config.yml
@@ -38,6 +38,7 @@ repository:
 html:
   use_issues_button: false
   use_repository_button: true
+  google_analytics_id: G-BQJE5V9RK2
 
 sphinx:
   config:
