--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "wraith13.unsaved-files-vscode"
+        "wraith13.unsaved-files-vscode",
+        "ms-vscode.live-server"
     ]
 }
