docs: update index

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title: "Artificial Intelligence | Lecture Notes" # The title of the book. Will be placed in the left navbar.
+title: "Lecture Notes" # The title of the book. Will be placed in the left navbar.
 author: <a href="https://entelecheia.me">Young Joon Lee</a>
 copyright: "2023"
 # logo: logo.png # A path to the book logo
