docs: update toc for mlops

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -69,6 +69,7 @@ parts:
           - file: lectures/aiart/image2music          
       - file: lectures/mlops/index
         sections:
+          - file: lectures/mlops/intro
           - file: lectures/mlops/dev-env
           - file: lectures/mlops/dotfiles
       - file: lectures/ds/index
