docs: update intro to mlops

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,9 @@
 {
     "recommendations": [
         "wraith13.unsaved-files-vscode",
-        "ms-vscode.live-server"
+        "ms-vscode.live-server",
+        "docsmsft.docs-images",
+        "mdickin.markdown-shortcuts",
+        "yzhang.markdown-all-in-one"
     ]
 }
