docs: use tex for figures

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,11 @@ coverage.xml
 htmlcov/
 pytest-coverage.*
 
+# TeX
+**/tex/**/output/
+**/tex/**/*.aux
+**/tex/**/*.log
+**/tex/**/*.pdf
+
 # Temporary files
 .tmp
