build: bump jupyter-book vesrion to 0.14.0

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -42,7 +42,8 @@ html:
 
 sphinx:
   config:
-    html_theme: furo
+    # html_theme: furo
+    html_theme: sphinx_book_theme
     html_extra_path: ['assets']
     bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
