--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ekorpkit = "^0.1.40"
 jupyter-book = "^0.14.0"
 matplotlib = "^3.7.1"
 numpy = "^1.24.2"
+sphinx-book-theme = ">=0.4.0rc1"
 sphinx-inline-tabs = "^2022.1.2b11"
 sphinx-proof = "^0.1.3"
 sphinx-examples = "^0.0.5"
