docs: add advances in NLP

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -48,7 +48,8 @@ parts:
           # - file: lectures/nlp_deep/lab2-corpus-eda
           - file: lectures/nlp_deep/lab3-train-tokenizers
           - file: lectures/nlp_deep/lab4-pretraining-lms
-      - file: lectures/nlp_apps/index
+      - file: lectures/nlp_advances/index
+      # - file: lectures/nlp_apps/index
           # - file: lectures/nlp_apps/eda
           # - file: lectures/nlp_apps/ner
       - file: lectures/aiart/index
