build: add sphinxcontrib.youtube extension

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -85,6 +85,7 @@ sphinx:
     - sphinx_proof
     - sphinx_examples
     - hoverxref.extension
+    - sphinxcontrib.youtube
 
 launch_buttons:
   colab_url: "https://colab.research.google.com"
