--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sphinx-inline-tabs = "^2022.1.2b11"
 sphinx-proof = "^0.1.3"
 sphinx-examples = "^0.0.5"
 sphinx-hoverxref = "^1.3.0"
+sphinxcontrib-youtube = "^1.2.0"
 furo = ">2022.1.29"
 
 [tool.black]
