docs: add robot drawings

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -56,6 +56,7 @@ parts:
         sections:
           - file: lectures/aiart/intro
           - file: lectures/aiart/project-themes
+          - file: lectures/aiart/robot_drawings
           - file: lectures/aiart/dalle1
           - file: lectures/aiart/dalle2
           - file: lectures/aiart/imagen
