build: add sphinx-thebe

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -46,8 +46,10 @@ sphinx:
     html_theme: sphinx_book_theme
     html_theme_options:
       repository_url: https://github.com/entelecheia/lecture
+      path_to_docs: book
       launch_buttons:
         colab_url: "https://colab.research.google.com"
+        thebe: true
     html_extra_path: ["assets"]
     bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
@@ -90,6 +92,7 @@ sphinx:
     - sphinx_examples
     - hoverxref.extension
     - sphinxcontrib.youtube
+    - sphinx_thebe
 
 launch_buttons:
   colab_url: "https://colab.research.google.com"
