--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ sphinx-proof = "^0.1.3"
 sphinx-examples = "^0.0.5"
 sphinx-hoverxref = "^1.3.0"
 sphinxcontrib-youtube = "^1.2.0"
+sphinx-thebe = "^0.2.1"
 furo = ">2022.1.29"
 
 [tool.black]
