--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -31,6 +31,7 @@ parts:
           - file: lectures/nlp_deep/intro
           - file: lectures/nlp_deep/ekorpkit
           - file: lectures/nlp_deep/zeroshot
+          - file: lectures/nlp_deep/rlhf
           # - file: lectures/nlp_deep/bloom
           # - file: lectures/nlp_deep/bloom_apps
           - file: lectures/nlp_deep/transformers
@@ -50,8 +51,8 @@ parts:
           - file: lectures/nlp_deep/lab4-pretraining-lms
       - file: lectures/nlp_advances/index
       # - file: lectures/nlp_apps/index
-          # - file: lectures/nlp_apps/eda
-          # - file: lectures/nlp_apps/ner
+      # - file: lectures/nlp_apps/eda
+      # - file: lectures/nlp_apps/ner
       - file: lectures/aiart/index
         sections:
           - file: lectures/aiart/intro
