--- a/book/_config.yml
+++ b/book/_config.yml
@@ -8,7 +8,7 @@
 title: "Lecture Notes" # The title of the book. Will be placed in the left navbar.
 author: <a href="https://entelecheia.me">Young Joon Lee</a>
 copyright: "2023"
-# logo: logo.png # A path to the book logo
+logo: logo-entelecheia.png # A path to the book logo
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
