--- a/book/_config.yml
+++ b/book/_config.yml
@@ -36,6 +36,7 @@ repository:
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
+  favicon: favicon.png
   use_issues_button: false
   use_repository_button: true
   google_analytics_id: G-BQJE5V9RK2
