build: support sphinxcontrib.video extension

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -93,6 +93,7 @@ sphinx:
     - sphinx_examples
     - hoverxref.extension
     - sphinxcontrib.youtube
+    - sphinxcontrib.video
     - sphinx_thebe
 
 launch_buttons:
