--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ default_install_hook_types: [commit-msg, pre-commit]
 default_stages: [commit, manual]
 fail_fast: true
 minimum_pre_commit_version: "1.4.3"
+exclude: 'intro.mp4'
 repos:
   - repo: meta
     hooks:
