build: update config

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -5,10 +5,10 @@
 
 #######################################################################################
 # Book settings
-title: "Lecture Notes" # The title of the book. Will be placed in the left navbar.
+title: "ἐντελέχεια" # The title of the book. Will be placed in the left navbar.
 author: <a href="https://entelecheia.me">Young Joon Lee</a>
 copyright: "2023"
-logo: logo-entelecheia.png # A path to the book logo
+# logo: logo-entelecheia.png # A path to the book logo
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -37,6 +37,7 @@ repository:
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
   favicon: favicon.png
+  baseurl: https://lecture.entelecheia.ai/
   use_issues_button: false
   use_repository_button: true
   google_analytics_id: G-BQJE5V9RK2
@@ -44,13 +45,13 @@ html:
 sphinx:
   config:
     # html_theme: furo
-    html_theme: sphinx_book_theme
-    html_theme_options:
-      repository_url: https://github.com/entelecheia/lecture
-      path_to_docs: book
-      launch_buttons:
-        colab_url: "https://colab.research.google.com"
-        thebe: true
+    # html_theme: sphinx_book_theme
+    # html_theme_options:
+    #   repository_url: https://github.com/entelecheia/lecture
+    #   path_to_docs: book
+    #   launch_buttons:
+    #     colab_url: "https://colab.research.google.com"
+    #     thebe: true
     html_extra_path: ["assets"]
     bibtex_reference_style: author_year
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
@@ -98,3 +99,4 @@ sphinx:
 
 launch_buttons:
   colab_url: "https://colab.research.google.com"
+  thebe: true
