test: integrate chatbot

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,9 +41,14 @@ html:
   use_issues_button: false
   use_repository_button: true
   google_analytics_id: G-BQJE5V9RK2
-
+  extra_navbar: |
+    <div>
+      <script src="https://cdn.jsdelivr.net/npm/openai@3.2.1/dist/index.min.js"></script>
+      <button id="ask-button">Ask a question</button>
+    </div>
 sphinx:
   config:
+    language: en
     # html_theme: furo
     # html_theme: sphinx_book_theme
     # html_theme_options:
