test: integrate chatbot

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -46,6 +46,9 @@ html:
       <script src="https://cdn.jsdelivr.net/npm/openai@3.2.1/dist/index.min.js"></script>
       <button id="ask-button">Ask a question</button>
     </div>
+  extra_footer: ""  # Will be displayed underneath the footer.
+
+
 sphinx:
   config:
     language: en
