--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,12 +41,12 @@ html:
   use_issues_button: false
   use_repository_button: true
   google_analytics_id: G-BQJE5V9RK2
-  extra_navbar: ""
-  extra_footer: |
-    <div>
-      <script src="https://cdn.jsdelivr.net/npm/openai@3.2.1/dist/index.min.js"></script>
-      <button id="ask-button">Ask a question</button>
-    </div>
+  # extra_navbar: ""
+  # extra_footer: |
+  #   <div>
+  #     <script src="https://cdn.jsdelivr.net/npm/openai@3.2.1/dist/index.min.js"></script>
+  #     <button id="ask-button">Ask a question</button>
+  #   </div>
 
 
 sphinx:
