docs: add detectGPT

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -32,6 +32,7 @@ parts:
           - file: lectures/nlp_deep/ekorpkit
           - file: lectures/nlp_deep/zeroshot
           - file: lectures/nlp_deep/rlhf
+          - file: lectures/nlp_deep/detectGPT
           # - file: lectures/nlp_deep/bloom
           # - file: lectures/nlp_deep/bloom_apps
           - file: lectures/nlp_deep/transformers
