--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -51,6 +51,9 @@ parts:
           - file: lectures/nlp_deep/lab3-train-tokenizers
           - file: lectures/nlp_deep/lab4-pretraining-lms
       - file: lectures/nlp_advances/index
+        sections:
+          - file: lectures/nlp_advances/detectGPT
+          - file: lectures/nlp_advances/gpt4
       # - file: lectures/nlp_apps/index
       # - file: lectures/nlp_apps/eda
       # - file: lectures/nlp_apps/ner
