--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -9,7 +9,6 @@ parts:
       - file: lectures/nlp_intro/index
         sections:
           - file: lectures/nlp_intro/intro
-          - file: lectures/nlp_intro/ekorpkit
           - file: lectures/nlp_intro/research
           - file: lectures/nlp_intro/language_models
           - file: lectures/nlp_intro/topic
@@ -24,12 +23,13 @@ parts:
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
           # - file: lectures/nlp_intro/text_segmentation
+          - file: lectures/nlp_intro/ekorpkit
           - file: lectures/nlp_intro/lab1-corpus
           - file: lectures/nlp_intro/lab2-corpus-eda
       - file: lectures/nlp_deep/index
         sections:
           - file: lectures/nlp_deep/intro
-          - file: lectures/nlp_deep/ekorpkit
+          - file: lectures/nlp_deep/llms
           - file: lectures/nlp_deep/zeroshot
           - file: lectures/nlp_deep/rlhf
           - file: lectures/nlp_deep/detectGPT
@@ -46,6 +46,7 @@ parts:
           # - file: lectures/nlp_deep/bertopic
           # - file: lectures/nlp_deep/doc_embeddings
           # - file: lectures/nlp_deep/enc-dec
+          - file: lectures/nlp_deep/ekorpkit
           - file: lectures/nlp_deep/lab1-corpus
           # - file: lectures/nlp_deep/lab2-corpus-eda
           - file: lectures/nlp_deep/lab3-train-tokenizers
