docs: add gitops

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -78,7 +78,7 @@ parts:
       - file: lectures/mlops/index
         sections:
           - file: lectures/mlops/intro
-          - file: lectures/mlops/hitops
+          - file: lectures/mlops/gitops
           - file: lectures/mlops/dotfiles
       - file: lectures/ds/index
 
