--- a/book/_config.yml
+++ b/book/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title: "ἐντελέχεια" # The title of the book. Will be placed in the left navbar.
+title: "ἐντελέχεια.άι" # The title of the book. Will be placed in the left navbar.
 author: <a href="https://entelecheia.me">Young Joon Lee</a>
 copyright: "2023"
 # logo: logo-entelecheia.png # A path to the book logo
@@ -47,7 +47,6 @@ html:
   #     <script src="https://cdn.jsdelivr.net/npm/openai@3.2.1/dist/index.min.js"></script>
   #     <button id="ask-button">Ask a question</button>
   #   </div>
-
 
 sphinx:
   config:
