chore: add announcement

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,6 +41,11 @@ html:
   use_issues_button: false
   use_repository_button: true
   google_analytics_id: G-BQJE5V9RK2
+  announcement: |
+    <p>
+      <strong>Announcement:</strong>
+      You can install the accompanying AI tutor <a href="https://github.com/entelecheia/entelecheia-lecture-bot">here</a>.
+    </p>
   # extra_navbar: ""
   # extra_footer: |
   #   <div>
