chore: remove repo button

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -39,7 +39,7 @@ html:
   favicon: favicon.png
   baseurl: https://lecture.entelecheia.ai/
   use_issues_button: false
-  use_repository_button: true
+  use_repository_button: false
   google_analytics_id: G-BQJE5V9RK2
   announcement: |
     <p>
