chore: add lecture-bot

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -86,6 +86,7 @@ parts:
 
   - caption: About
     chapters:
+      - file: about/lecture-bot.md
       - url: https://entelecheia.me
         title: entelecheia.me
       - file: about/index
