docs: add thesis

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -53,6 +53,7 @@ parts:
           - file: lectures/nlp_deep/lab4-pretraining-lms
       - file: lectures/nlp_advances/index
         sections:
+          - file: lectures/nlp_advances/thesis
           - file: lectures/nlp_advances/detectGPT
           - file: lectures/nlp_advances/gpt4
       # - file: lectures/nlp_apps/index
