docs: add aiart

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -62,7 +62,7 @@ parts:
       - file: lectures/aiart/index
         sections:
           - file: lectures/aiart/intro
-          - file: lectures/aiart/project-themes
+          - file: lectures/aiart/aiart
           - file: lectures/aiart/robot_drawings
           - file: lectures/aiart/dalle1
           - file: lectures/aiart/dalle2
@@ -76,6 +76,7 @@ parts:
           - file: lectures/aiart/whisper
           - file: lectures/aiart/text2music
           - file: lectures/aiart/image2music
+          - file: lectures/aiart/project-themes
       - file: lectures/mlops/index
         sections:
           - file: lectures/mlops/intro
