--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -84,6 +84,8 @@ parts:
           - file: lectures/mlops/devops
           - file: lectures/mlops/gitops
           - file: lectures/mlops/dotfiles
+          - file: lectures/mlops/devsecops
+          - file: lectures/mlops/auth-enc-sign
       - file: lectures/ds/index
 
   - caption: About
