--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -31,6 +31,7 @@ parts:
           - file: lectures/nlp_deep/intro
           - file: lectures/nlp_deep/llms
           - file: lectures/nlp_deep/zeroshot
+          - file: lectures/nlp_deep/decoding
           - file: lectures/nlp_deep/transformers
           - file: lectures/nlp_deep/rlhf
           - file: lectures/nlp_deep/detectGPT
