build: pin down the version

--- a/book/requirements.txt
+++ b/book/requirements.txt
@@ -1,4 +1,5 @@
 jupyter-book
+pydata-sphinx-theme==0.13.1
 sphinx-book-theme
 matplotlib
 numpy
@@ -9,4 +10,3 @@ sphinx-hoverxref
 sphinxcontrib-youtube
 sphinxcontrib-video
 sphinx-thebe
-furo>=2021.1.1
