chore: update toc

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -87,6 +87,7 @@ parts:
           - file: lectures/mlops/devsecops
           - file: lectures/mlops/dotfiles
           - file: lectures/mlops/auth-enc-sign
+          - file: lectures/mlops/age-gpg-ssh
       - file: lectures/ds/index
 
   - caption: About
