docs(mlops): add Github guide

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -88,6 +88,7 @@ parts:
           - file: lectures/mlops/dotfiles
           - file: lectures/mlops/auth-enc-sign
           - file: lectures/mlops/age-gpg-ssh
+          - file: lectures/mlops/github
       - file: lectures/ds/index
 
   - caption: About
