feat: support mermaind chart tool

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -107,6 +107,7 @@ sphinx:
     - hoverxref.extension
     - sphinxcontrib.youtube
     - sphinxcontrib.video
+    - sphinxcontrib.mermaid
     - sphinx_thebe
 
 launch_buttons:
