--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ sphinx-hoverxref = "^1.3.0"
 sphinxcontrib-youtube = "^1.2.0"
 sphinxcontrib-video = "^0.1.1"
 sphinx-thebe = "^0.2.1"
+sphinxcontrib-mermaid = "^0.8.1"
 furo = ">2022.1.29"
 
 [tool.black]
