docs: add pass to mlops

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -90,6 +90,7 @@ parts:
           - file: lectures/mlops/auth-enc-sign
           - file: lectures/mlops/age-gpg-ssh
           - file: lectures/mlops/github
+          - file: lectures/mlops/pass
       - file: lectures/ds/index
 
   - caption: About
