docs: add docker to mlops

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -91,6 +91,7 @@ parts:
           - file: lectures/mlops/age-gpg-ssh
           - file: lectures/mlops/github
           - file: lectures/mlops/pass
+          - file: lectures/mlops/docker
       - file: lectures/ds/index
 
   - caption: About
