chore: update toc

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -86,6 +86,7 @@ parts:
           - file: lectures/mlops/devops
           - file: lectures/mlops/gitops
           - file: lectures/mlops/devsecops
+          - file: lectures/mlops/llmops
           - file: lectures/mlops/dotfiles
           - file: lectures/mlops/auth-enc-sign
           - file: lectures/mlops/age-gpg-ssh
