--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -58,6 +58,7 @@ parts:
           - file: lectures/nlp_advances/detectGPT
           - file: lectures/nlp_advances/gpt4
           - file: lectures/nlp_advances/camelids
+          - file: lectures/nlp_advances/sam/index
       # - file: lectures/nlp_apps/index
       # - file: lectures/nlp_apps/eda
       # - file: lectures/nlp_apps/ner
