--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -94,6 +94,7 @@ parts:
           - file: lectures/mlops/github
           - file: lectures/mlops/pass
           - file: lectures/mlops/docker
+          - file: lectures/mlops/simple-pipeline/index
       - file: lectures/ds/index
 
   - caption: About
