docs(deepnlp): add bertviz

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -36,6 +36,8 @@ parts:
           # - file: lectures/nlp_deep/bloom
           # - file: lectures/nlp_deep/bloom_apps
           - file: lectures/nlp_deep/bert/index
+            sections:
+              - file: lectures/nlp_deep/bert/bertviz
           - file: lectures/nlp_deep/t5
           - file: lectures/nlp_deep/tokenization
           - file: lectures/nlp_deep/sentencepiece
