docs(mlops): change toc

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -90,12 +90,14 @@ parts:
           - file: lectures/mlops/gitops
           - file: lectures/mlops/devsecops
           - file: lectures/mlops/llmops
-          - file: lectures/mlops/dotfiles
+          - file: lectures/mlops/dotfiles/index
+            sections:
+              - file: lectures/mlops/dotfiles/age-gpg-ssh
+              - file: lectures/mlops/dotfiles/pass
           - file: lectures/mlops/auth-enc-sign
-          - file: lectures/mlops/age-gpg-ssh
           - file: lectures/mlops/github
           - file: lectures/mlops/pass
-          - file: lectures/mlops/docker
+          - file: lectures/mlops/containerization/index
           - file: lectures/mlops/simple-pipeline/index
       - file: lectures/ds/index
 
