docs(mlops): add dotdrop

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -94,6 +94,7 @@ parts:
             sections:
               - file: lectures/mlops/dotfiles/age-gpg-ssh
               - file: lectures/mlops/dotfiles/pass
+              - file: lectures/mlops/dotfiles/dotdrop
           - file: lectures/mlops/auth-enc-sign
           - file: lectures/mlops/github
           - file: lectures/mlops/pass
