docs(mlops): update containerd

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -99,6 +99,8 @@ parts:
           - file: lectures/mlops/github
           - file: lectures/mlops/pass
           - file: lectures/mlops/containerization/index
+            sections:
+              - file: lectures/mlops/containerization/containerd
           - file: lectures/mlops/simple-pipeline/index
       - file: lectures/ds/index
 
