chore(MLOps): rearrange TOC and rename github file to index

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -96,8 +96,7 @@ parts:
               - file: lectures/mlops/dotfiles/pass
               - file: lectures/mlops/dotfiles/dotdrop
           - file: lectures/mlops/auth-enc-sign
-          - file: lectures/mlops/github
-          - file: lectures/mlops/pass
+          - file: lectures/mlops/github/index
           - file: lectures/mlops/containerization/index
             sections:
               - file: lectures/mlops/containerization/containerd
