docs(mlops): add project templating

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -97,6 +97,9 @@ parts:
               - file: lectures/mlops/dotfiles/dotdrop
           - file: lectures/mlops/auth-enc-sign
           - file: lectures/mlops/github/index
+            sections:
+              # - file: lectures/mlops/github/github-actions
+              - file: lectures/mlops/github/template
           - file: lectures/mlops/containerization/index
             sections:
               - file: lectures/mlops/containerization/containerd
