chore(book): update TOC maxdepth

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -5,6 +5,7 @@ format: jb-book
 root: index
 parts:
   - caption: Course
+    maxdepth: 3
     chapters:
       - file: lectures/nlp_intro/index
         sections:
