--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -4,13 +4,13 @@ name: semantic-prerelease
 on:
   workflow_call:
   workflow_dispatch:
-  push:
-    branches:
-      - pre*
-      - beta*
-      - alpha*
-      - rc*
-      - nigtly*
+  # push:
+  #   branches:
+  #     - pre*
+  #     - beta*
+  #     - alpha*
+  #     - rc*
+  #     - nigtly*
 
 permissions:
   contents: write
