refactor(book): add target="_blank" to external links in _config.yml

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -6,7 +6,7 @@
 #######################################################################################
 # Book settings
 title: "ἐντελέχεια.άι" # The title of the book. Will be placed in the left navbar.
-author: <a href="https://entelecheia.me">Young Joon Lee</a>
+author: <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
 copyright: "2023"
 # logo: logo-entelecheia.png # A path to the book logo
 
@@ -44,8 +44,8 @@ html:
   announcement: |
     <p>
       <strong>Announcement:</strong>
-      You can install the accompanying AI tutor <a href="https://chrome.google.com/webstore/detail/lecturebot-for-%E1%BC%90%CE%BD%CF%84%CE%B5%CE%BB%CE%AD%CF%87%CE%B5%CE%B9%CE%B1/lfgfgbomindbccgidgalhhndggddpagd">here</a>.
-      <a class="reference external" href="https://chrome.google.com/webstore/detail/lecturebot-for-%E1%BC%90%CE%BD%CF%84%CE%B5%CE%BB%CE%AD%CF%87%CE%B5%CE%B9%CE%B1/lfgfgbomindbccgidgalhhndggddpagd"><img alt="chrome-web-store-image" src="https://img.shields.io/chrome-web-store/v/lfgfgbomindbccgidgalhhndggddpagd" /></a>
+      You can install the accompanying AI tutor <a href="https://chrome.google.com/webstore/detail/lecturebot-for-%E1%BC%90%CE%BD%CF%84%CE%B5%CE%BB%CE%AD%CF%87%CE%B5%CE%B9%CE%B1/lfgfgbomindbccgidgalhhndggddpagd" target="_blank">here</a>.
+      <a class="reference external" href="https://chrome.google.com/webstore/detail/lecturebot-for-%E1%BC%90%CE%BD%CF%84%CE%B5%CE%BB%CE%AD%CF%87%CE%B5%CE%B9%CE%B1/lfgfgbomindbccgidgalhhndggddpagd" target="_blank"><img alt="chrome-web-store-image" src="https://img.shields.io/chrome-web-store/v/lfgfgbomindbccgidgalhhndggddpagd" /></a>
     </p>
   # extra_navbar: ""
   # extra_footer: |
