chore(toc): reorganize and rename MLOps section

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -87,10 +87,11 @@ parts:
         sections:
           - file: lectures/mlops/intro
           - file: lectures/mlops/project
-          - file: lectures/mlops/devops
-          - file: lectures/mlops/gitops
-          - file: lectures/mlops/devsecops
-          - file: lectures/mlops/llmops
+          - file: lectures/mlops/devops/index
+            sections:
+              - file: lectures/mlops/gitops
+              - file: lectures/mlops/devsecops
+              - file: lectures/mlops/llmops
           - file: lectures/mlops/dotfiles/index
             sections:
               - file: lectures/mlops/dotfiles/age-gpg-ssh
