chore(config): update author link in _config.yml

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -6,7 +6,7 @@
 #######################################################################################
 # Book settings
 title: "ἐντελέχεια.άι" # The title of the book. Will be placed in the left navbar.
-author: <a href="https://entelecheia.me" target="_blank">>Young Joon Lee</a>
+author: <a href="https://entelecheia.me" target="_blank">Young Joon Lee</a>
 copyright: "2023"
 # logo: logo-entelecheia.png # A path to the book logo
 
