docs: add datasets lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -12,6 +12,7 @@ parts:
           - file: lectures/nlp_intro/intro
           - file: lectures/nlp_intro/research
           - file: lectures/nlp_intro/language_models
+          - file: lectures/nlp_intro/datasets/index
           - file: lectures/nlp_intro/topic_modeling
           - file: lectures/nlp_intro/topic_coherence
           - file: lectures/nlp_intro/sentiments
