--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -13,8 +13,11 @@ parts:
           - file: lectures/nlp_intro/research
           - file: lectures/nlp_intro/language_models
           - file: lectures/nlp_intro/datasets/index
-          - file: lectures/nlp_intro/topic_modeling
-          - file: lectures/nlp_intro/topic_coherence
+          - file: lectures/nlp_intro/topic/index
+            sections:
+              - file: lectures/nlp_intro/topic/coherence.md
+              - file: lectures/nlp_intro/topic/coherence-practice.md
+              - file: lectures/nlp_intro/topic/tomotopy
           - file: lectures/nlp_intro/sentiments
           - file: lectures/nlp_intro/tokenization
           - file: lectures/nlp_intro/word_segmentation
@@ -27,7 +30,6 @@ parts:
           - file: lectures/nlp_intro/ekorpkit
           - file: lectures/nlp_intro/lab1-corpus
           - file: lectures/nlp_intro/lab2-corpus-eda
-          - file: lectures/nlp_intro/lab4-tomotopy
       - file: lectures/nlp_deep/index
         sections:
           - file: lectures/nlp_deep/intro
