--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,15 @@ license = "CC-BY-4.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
-python-semantic-release = "^7.33.1"
-ekorpkit = "^0.1.40"
+python = ">=3.8.1,<3.12"
+seaborn = "^0.12.2"
+nltk = "^3.8.1"
+gensim = "^4.3.1"
+hyfi = {extras = ["all"], version = "^0.2.14"}
 
 [tool.poetry.group.book.dependencies]
+python-semantic-release = "^7.33.1"
 jupyter-book = "^0.15.1"
-matplotlib = "^3.7.1"
-numpy = "^1.24.3"
 sphinx-book-theme = ">=0.4.0rc1"
 sphinx-inline-tabs = "^2023.4.21"
 sphinx-proof = "^0.1.3"
@@ -24,7 +25,6 @@ sphinxcontrib-youtube = "^1.2.0"
 sphinxcontrib-video = "^0.1.1"
 sphinx-thebe = "^0.2.1"
 sphinxcontrib-mermaid = "^0.8.1"
-furo = ">2022.1.29"
 
 [tool.black]
 exclude = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']
