chore: move llms

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -33,9 +33,11 @@ parts:
       - file: lectures/nlp_deep/index
         sections:
           - file: lectures/nlp_deep/intro
-          - file: lectures/nlp_deep/llms
-          - file: lectures/nlp_deep/zeroshot
-          - file: lectures/nlp_deep/decoding
+          - file: lectures/nlp_deep/llms/index
+            sections:
+              - file: lectures/nlp_deep/llms/zeroshot
+              - file: lectures/nlp_deep/llms/decoding
+              - file: lectures/nlp_deep/llms/plms
           - file: lectures/nlp_deep/transformers/index
             sections:
               - file: lectures/nlp_deep/transformers/bert
@@ -46,7 +48,6 @@ parts:
             # - file: lectures/nlp_deep/bloom_apps
           - file: lectures/nlp_deep/tokenization
           - file: lectures/nlp_deep/sentencepiece
-          - file: lectures/nlp_deep/plms
           - file: lectures/nlp_deep/rlhf
           - file: lectures/nlp_deep/detectGPT
           # - file: lectures/nlp_deep/prompts
