--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -46,8 +46,10 @@ parts:
               - file: lectures/nlp_deep/transformers/byt5
             # - file: lectures/nlp_deep/bloom
             # - file: lectures/nlp_deep/bloom_apps
-          - file: lectures/nlp_deep/tokenization
-          - file: lectures/nlp_deep/sentencepiece
+          - file: lectures/nlp_intro/datasets/index
+          - file: lectures/nlp_deep/tokenization/index
+            sections:
+              - file: lectures/nlp_deep/tokenization/sentencepiece
           - file: lectures/nlp_deep/rlhf
           - file: lectures/nlp_deep/detectGPT
           # - file: lectures/nlp_deep/prompts
