refactor: move security lectures

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -100,10 +100,12 @@ parts:
               - file: lectures/mlops/devops/llmops
           - file: lectures/mlops/dotfiles/index
             sections:
-              - file: lectures/mlops/dotfiles/age-gpg-ssh
-              - file: lectures/mlops/dotfiles/pass
               - file: lectures/mlops/dotfiles/dotdrop
-          - file: lectures/mlops/auth-enc-sign
+          - file: lectures/mlops/security/index
+            sections:
+              - file: lectures/mlops/security/auth-enc-sign
+              - file: lectures/mlops/security/age-gpg-ssh
+              - file: lectures/mlops/security/pass
           - file: lectures/mlops/github/index
             sections:
               # - file: lectures/mlops/github/github-actions
