refactor: add external link

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -100,6 +100,8 @@ parts:
               - file: lectures/mlops/devops/llmops
           - file: lectures/mlops/dotfiles/index
             sections:
+              - url: https://dotfiles.entelecheia.ai
+                title: Dotfiles in Practice
               - file: lectures/mlops/dotfiles/dotdrop
           - file: lectures/mlops/security/index
             sections:
