--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -112,6 +112,10 @@ parts:
             sections:
               # - file: lectures/mlops/github/github-actions
               - file: lectures/mlops/github/template
+              - url: https://hyperfast-python.entelecheia.ai/
+                title: Hyperfast Python Template
+              # - url: https://hyperfast-template.entelecheia.ai/
+              #   title: Hyperfast Template
           - file: lectures/mlops/containerization/index
             sections:
               - file: lectures/mlops/containerization/containerd
