--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -118,6 +118,7 @@ parts:
               #   title: Hyperfast Template
           - file: lectures/mlops/containerization/index
             sections:
+              - file: lectures/mlops/containerization/docker
               - file: lectures/mlops/containerization/containerd
           - file: lectures/mlops/simple-pipeline/index
       - file: lectures/ds/index
