chore(toc): Update table of contents with new URLs

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -128,4 +128,8 @@ parts:
       - file: about/lecture-bot.md
       - url: https://entelecheia.me
         title: entelecheia.me
+      - url: https://course.entelecheia.ai
+        title: course.entelecheia.ai
+      - url: https://research.entelecheia.ai
+        title: research.entelecheia.ai
       - file: about/index
