--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -114,8 +114,8 @@ parts:
               - file: lectures/mlops/github/template
               - url: https://hyperfast-python.entelecheia.ai/
                 title: Hyperfast Python Template
-              # - url: https://hyperfast-template.entelecheia.ai/
-              #   title: Hyperfast Template
+              - url: https://hyperfast-template.entelecheia.ai/
+                title: Hyperfast Template
           - file: lectures/mlops/containerization/index
             sections:
               - file: lectures/mlops/containerization/docker
