chore(dotfiles): update Dotdrop documentation and repository structure

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -101,8 +101,10 @@ parts:
           - file: lectures/mlops/dotfiles/index
             sections:
               - url: https://dotfiles.entelecheia.ai
-                title: Dotfiles in Practice
+                title: Dotfiles Repository
               - file: lectures/mlops/dotfiles/dotdrop
+              - url: https://dotfiles.entelecheia.ai/usage/dotdrop/
+                title: dotfiles-setup-dotdrop Script
           - file: lectures/mlops/security/index
             sections:
               - file: lectures/mlops/security/auth-enc-sign
