chore(toc): update Dotfiles and security section URLs in table of contents

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -104,7 +104,9 @@ parts:
                 title: Dotfiles Repository
               - file: lectures/mlops/dotfiles/dotdrop
               - url: https://dotfiles.entelecheia.ai/usage/dotdrop/
-                title: dotfiles-setup-dotdrop Script
+                title: Dotdrop Setup Script
+              - url: https://dotfiles.entelecheia.ai/usage/github/
+                title: GitHub Setup Script
           - file: lectures/mlops/security/index
             sections:
               - file: lectures/mlops/security/auth-enc-sign
