--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -107,6 +107,10 @@ parts:
                 title: Dotdrop Setup Script
               - url: https://dotfiles.entelecheia.ai/usage/github/
                 title: GitHub Setup Script
+              - url: https://dotfiles.entelecheia.ai/usage/ssh-gpg-age/
+                title: SSH, GPG, and Age Setup Script
+              - url: https://dotfiles.entelecheia.ai/usage/pass/
+                title: Pass and Passage Setup Script
           - file: lectures/mlops/security/index
             sections:
               - file: lectures/mlops/security/auth-enc-sign
