chore(docs): update toc

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -106,11 +106,13 @@ parts:
               - url: https://dotfiles.entelecheia.ai/usage/dotdrop/
                 title: Dotdrop Setup Script
               - url: https://dotfiles.entelecheia.ai/usage/github/
-                title: GitHub Setup Script
+                title: GitHub Setup Scripts
               - url: https://dotfiles.entelecheia.ai/usage/ssh-gpg-age/
-                title: SSH, GPG, and Age Setup Script
+                title: SSH, GPG, and Age Setup Scripts
               - url: https://dotfiles.entelecheia.ai/usage/pass/
-                title: Pass and Passage Setup Script
+                title: Pass and Passage Scripts
+              - url: https://dotfiles.entelecheia.ai/usage/dockerfiles/
+                title: Dockerfiles Scripts
           - file: lectures/mlops/security/index
             sections:
               - file: lectures/mlops/security/auth-enc-sign
