chore(favicon): update favicon URL

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -36,7 +36,7 @@ repository:
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
-  favicon: favicon-v2-circle.png
+  favicon: https://assets.entelecheia.ai/favicon.png
   baseurl: https://lecture.entelecheia.ai/
   use_issues_button: false
   use_repository_button: false
