chore(toc): add Doppler usage section to toc.yml

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -111,6 +111,8 @@ parts:
                 title: SSH, GPG, and Age Setup Scripts
               - url: https://dotfiles.entelecheia.ai/usage/pass/
                 title: Pass and Passage Scripts
+              - url: https://dotfiles.entelecheia.ai/usage/doppler/
+                title: Doppler Usage
               - url: https://dotfiles.entelecheia.ai/usage/dockerfiles/
                 title: Dockerfiles Scripts
           - file: lectures/mlops/security/index
