chore(lecture): update table of contents and rename files in nlp_intro/datasets directory.

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -13,6 +13,10 @@ parts:
           - file: lectures/nlp_intro/research
           - file: lectures/nlp_intro/language_models
           - file: lectures/nlp_intro/datasets/index
+            sections:
+              - file: lectures/nlp_intro/datasets/corpus
+              # - file: lectures/nlp_intro/lab1-corpus
+              # - file: lectures/nlp_intro/lab2-corpus-eda
           - file: lectures/nlp_intro/topic/index
             sections:
               - file: lectures/nlp_intro/topic/coherence.md
@@ -28,8 +32,6 @@ parts:
           # - file: lectures/nlp_intro/doc2vec
           # - file: lectures/nlp_intro/text_segmentation
           - file: lectures/nlp_intro/ekorpkit
-          - file: lectures/nlp_intro/lab1-corpus
-          - file: lectures/nlp_intro/lab2-corpus-eda
       - file: lectures/nlp_deep/index
         sections:
           - file: lectures/nlp_deep/intro
