docs: add crawling dart lab

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -15,6 +15,7 @@ parts:
           - file: lectures/nlp_intro/datasets/index
             sections:
               - file: lectures/nlp_intro/datasets/corpus
+              - file: lectures/nlp_intro/datasets/lab-dart
               # - file: lectures/nlp_intro/lab1-corpus
               # - file: lectures/nlp_intro/lab2-corpus-eda
           - file: lectures/nlp_intro/topic/index
