--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -50,6 +50,8 @@ parts:
             # - file: lectures/nlp_deep/bloom
             # - file: lectures/nlp_deep/bloom_apps
           - file: lectures/nlp_deep/datasets/index
+            sections:
+              - file: lectures/nlp_deep/datasets/lab-corpus
           - file: lectures/nlp_deep/tokenization/index
             sections:
               - file: lectures/nlp_deep/tokenization/sentencepiece
@@ -60,7 +62,6 @@ parts:
           # - file: lectures/nlp_deep/doc_embeddings
           # - file: lectures/nlp_deep/enc-dec
           - file: lectures/nlp_deep/ekorpkit
-          - file: lectures/nlp_deep/lab1-corpus
           # - file: lectures/nlp_deep/lab2-corpus-eda
           - file: lectures/nlp_deep/lab3-train-tokenizers
           - file: lectures/nlp_deep/lab4-pretraining-lms
