refactor(nlp_intro): rename notebook files and update table of contents

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -11,7 +11,7 @@ parts:
         sections:
           - file: lectures/nlp_intro/intro
           - file: lectures/nlp_intro/research
-          - file: lectures/nlp_intro/language_models
+          - file: lectures/nlp_intro/lm/index
           - file: lectures/nlp_intro/datasets/index
             sections:
               - file: lectures/nlp_intro/datasets/corpus
@@ -23,16 +23,16 @@ parts:
               - file: lectures/nlp_intro/topic/coherence.md
               - file: lectures/nlp_intro/topic/coherence-practice.md
               - file: lectures/nlp_intro/topic/tomotopy
-          - file: lectures/nlp_intro/sentiments
-          - file: lectures/nlp_intro/tokenization
-          - file: lectures/nlp_intro/word_segmentation
-          - file: lectures/nlp_intro/vectorization
-          - file: lectures/nlp_intro/word_embeddings
-          # - file: lectures/nlp_intro/lm_evaluation
+          - file: lectures/nlp_intro/sentiments/index
+          - file: lectures/nlp_intro/tokenization/index
+            sections:
+              - file: lectures/nlp_intro/tokenization/segmentation
+          - file: lectures/nlp_intro/vectorization/index
+          - file: lectures/nlp_intro/embeddings/index
           # - file: lectures/nlp_intro/lexicons
           # - file: lectures/nlp_intro/doc2vec
           # - file: lectures/nlp_intro/text_segmentation
-          - file: lectures/nlp_intro/ekorpkit
+          # - file: lectures/nlp_intro/ekorpkit
       - file: lectures/nlp_deep/index
         sections:
           - file: lectures/nlp_deep/intro
