chore(nlp_advances): add GPT folder and content

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -68,9 +68,11 @@ parts:
       - file: lectures/nlp_advances/index
         sections:
           - file: lectures/nlp_advances/thesis
-          - file: lectures/nlp_advances/detectGPT
-          - file: lectures/nlp_advances/gpt4
-          - file: lectures/nlp_advances/camelids
+          - file: lectures/nlp_advances/gpt/index
+            sections:
+              - file: lectures/nlp_advances/gpt/detectGPT
+              - file: lectures/nlp_advances/gpt/gpt4
+              - file: lectures/nlp_advances/gpt/camelids
           - file: lectures/nlp_advances/sam/index
       # - file: lectures/nlp_apps/index
       # - file: lectures/nlp_apps/eda
