--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -74,6 +74,7 @@ parts:
               - file: lectures/nlp_advances/gpt/gpt4
               - file: lectures/nlp_advances/gpt/camelids
           - file: lectures/nlp_advances/sam/index
+          - file: lectures/nlp_advances/motion-capture-and-synthesis/index
       # - file: lectures/nlp_apps/index
       # - file: lectures/nlp_apps/eda
       # - file: lectures/nlp_apps/ner
