--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -61,7 +61,7 @@ parts:
           # - file: lectures/nlp_deep/bertopic
           # - file: lectures/nlp_deep/doc_embeddings
           # - file: lectures/nlp_deep/enc-dec
-          - file: lectures/nlp_deep/ekorpkit
+          # - file: lectures/nlp_deep/ekorpkit
           # - file: lectures/nlp_deep/lab2-corpus-eda
           - file: lectures/nlp_deep/lab3-train-tokenizers
           - file: lectures/nlp_deep/lab4-pretraining-lms
