chore(toc): remove intro.ipynb from nlp_deep section

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -35,7 +35,7 @@ parts:
           # - file: lectures/nlp_intro/ekorpkit
       - file: lectures/nlp_deep/index
         sections:
-          - file: lectures/nlp_deep/intro
+          # - file: lectures/nlp_deep/intro
           - file: lectures/nlp_deep/llms/index
             sections:
               - file: lectures/nlp_deep/llms/zeroshot
