chore: change figs path

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -75,27 +75,27 @@ parts:
               - file: lectures/nlp_advances/gpt/camelids
           - file: lectures/nlp_advances/sam/index
           - file: lectures/nlp_advances/motion-capture-and-synthesis/index
-      # - file: lectures/nlp_apps/index
-      # - file: lectures/nlp_apps/eda
-      # - file: lectures/nlp_apps/ner
       - file: lectures/aiart/index
         sections:
           - file: lectures/aiart/intro/index
           - file: lectures/aiart/brave/index
-          - file: lectures/aiart/aiart
-          - file: lectures/aiart/dalle1
-          - file: lectures/aiart/dalle2
-          - file: lectures/aiart/imagen
-          # - file: lectures/aiart/dalle-mini
-          # - file: lectures/aiart/disco
-          # - file: lectures/aiart/disco_batch
-          # - file: lectures/aiart/stable-diffusion
-          # - file: lectures/aiart/prompt-generator
-          - file: lectures/aiart/textual-inversion
-          - file: lectures/aiart/whisper
-          - file: lectures/aiart/text2music
-          - file: lectures/aiart/image2music
-          - file: lectures/aiart/robot_drawings
+          - file: lectures/aiart/aiart/index
+          - file: lectures/aiart/text-to-image/index
+            sections:
+              - file: lectures/aiart/text-to-image/dalle1
+              - file: lectures/aiart/text-to-image/dalle2
+              - file: lectures/aiart/text-to-image/imagen
+              # - file: lectures/aiart/dalle-mini
+              # - file: lectures/aiart/discoF
+              # - file: lectures/aiart/disco_batch
+              # - file: lectures/aiart/stable-diffusion
+              # - file: lectures/aiart/prompt-generator
+              - file: lectures/aiart/text-to-image/textual-inversion
+          - file: lectures/aiart/speech/index
+          - file: lectures/aiart/music/index
+            sections:
+              - file: lectures/aiart/music/image2music
+          - file: lectures/aiart/robot/index
       - file: lectures/mlops/index
         sections:
           - file: lectures/mlops/intro
