chore(toc): comment out unused lecture sections in AI Art

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -90,11 +90,11 @@ parts:
               # - file: lectures/aiart/disco_batch
               # - file: lectures/aiart/stable-diffusion
               # - file: lectures/aiart/prompt-generator
-              - file: lectures/aiart/text-to-image/textual-inversion
-          - file: lectures/aiart/speech/index
-          - file: lectures/aiart/music/index
-            sections:
-              - file: lectures/aiart/music/image2music
+              # - file: lectures/aiart/text-to-image/textual-inversion
+          # - file: lectures/aiart/speech/index
+          # - file: lectures/aiart/music/index
+          #   sections:
+          #     - file: lectures/aiart/music/image2music
           - file: lectures/aiart/robot/index
       - file: lectures/mlops/index
         sections:
