docs: add mc4 lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -51,7 +51,8 @@ parts:
             # - file: lectures/nlp_deep/bloom_apps
           - file: lectures/nlp_deep/datasets/index
             sections:
-              - file: lectures/nlp_deep/datasets/lab-corpus
+              - file: lectures/nlp_deep/datasets/mc4
+              # - file: lectures/nlp_deep/datasets/lab-corpus
           - file: lectures/nlp_deep/tokenization/index
             sections:
               - file: lectures/nlp_deep/tokenization/sentencepiece
