chore(toc): update lecture order; docs(nlp_deep): add training lecture index

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -56,16 +56,16 @@ parts:
           - file: lectures/nlp_deep/tokenization/index
             sections:
               - file: lectures/nlp_deep/tokenization/sentencepiece
-          - file: lectures/nlp_deep/rlhf
-          - file: lectures/nlp_deep/detectGPT
+              - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
+          - file: lectures/nlp_deep/training/lab4-pretraining-lms
+          # - file: lectures/nlp_deep/rlhf
+          # - file: lectures/nlp_deep/detectGPT
           # - file: lectures/nlp_deep/prompts
           # - file: lectures/nlp_deep/bertopic
           # - file: lectures/nlp_deep/doc_embeddings
           # - file: lectures/nlp_deep/enc-dec
           # - file: lectures/nlp_deep/ekorpkit
           # - file: lectures/nlp_deep/lab2-corpus-eda
-          - file: lectures/nlp_deep/lab3-train-tokenizers
-          - file: lectures/nlp_deep/lab4-pretraining-lms
       - file: lectures/nlp_advances/index
         sections:
           - file: lectures/nlp_advances/thesis
