docs: add training lecture

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -57,7 +57,9 @@ parts:
             sections:
               - file: lectures/nlp_deep/tokenization/sentencepiece
               - file: lectures/nlp_deep/tokenization/lab-train-tokenizers
-          - file: lectures/nlp_deep/training/lab4-pretraining-lms
+          - file: lectures/nlp_deep/training/index
+            sections:
+              - file: lectures/nlp_deep/training/lab4-pretraining-lms
           # - file: lectures/nlp_deep/rlhf
           # - file: lectures/nlp_deep/detectGPT
           # - file: lectures/nlp_deep/prompts
