docs: add chatbots

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -60,8 +60,10 @@ parts:
           - file: lectures/nlp_deep/training/index
             sections:
               - file: lectures/nlp_deep/training/lab4-pretraining-lms
-          # - file: lectures/nlp_deep/rlhf
-          # - file: lectures/nlp_deep/detectGPT
+          - file: lectures/nlp_deep/chatbots/index
+            sections:
+              - file: lectures/nlp_deep/chatbots/rlhf
+              - file: lectures/nlp_deep/chatbots/detectGPT
           # - file: lectures/nlp_deep/prompts
           # - file: lectures/nlp_deep/bertopic
           # - file: lectures/nlp_deep/doc_embeddings
